# flirror

./: .env.example  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  backstop.json  css-requirements.txt  docker-compose.yaml  mypy.ini  pyproject.toml  settings.example.cfg  setup.cfg  setup.py  test-requirements.txt  tox.ini
deploy/: docker-compose.example.yaml
dockerfiles/: css-Dockerfile  flirror-Dockerfile
flirror/: __init__.py  api.py  database.py  exceptions.py  google_auth.py  helpers.py  utils.py  views.py
flirror/crawler/: __init__.py  crawlers.py  google_auth.py  main.py  scheduling.py
flirror/modules/: __init__.py
flirror/modules/calendar/: __init__.py
flirror/modules/clock/: __init__.py
flirror/modules/newsfeed/: __init__.py
flirror/modules/stocks/: __init__.py
flirror/modules/weather/: __init__.py
flirror/static/: all.css
flirror/static/css/: style.css
flirror/static/scss/: all.scss
flirror/templates/: ajax.html  calendar.html  error.html  index.html  layout.html  map.html  module.html  weather.html
flirror/templates/modules/: calendar.html  clock.html  map.html  newsfeed.html  stocks.html  weather.html
helpers/: create-nodeenv.sh  dump-backstop.sh  echo_server.py  run-backstop.py  start_gui.sh
tests/: conftest.py  test_google_auth.py  test_utils.py  test_views.py
tests/crawler/: test_main.py  test_scheduling.py
tests/modules/: test_weather.py
tests/testdata/: client_secret.json  database-dump.sql  test-settings.cfg
tests/testdata/modules/weather/: fake_api_response.json
(+4 files in other folders)
